[package]
name = "comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
crdts = { path = "../crdts" }
chrono = "0.4"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
ropey = "1.6.0"
rand = "0.9.1"